fix rows going on new lines on smaller screens

--- a/src/features/HallLayout/components/Rows/Rows.module.scss
+++ b/src/features/HallLayout/components/Rows/Rows.module.scss
@@ -1,5 +1,6 @@
 .row {
     position: relative;
+    flex-wrap: nowrap;
 }
 
 .row-edit {
